# diesel-segfault

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/2022-12-04-024732_accounts/: down.sql  up.sql
src/: main.rs  pool.rs  schema.rs
src/accounts/: models.rs
